March ??, 2008 - 4.2:
Fixed bug 1912831 - False + UnusedPrivateMethod with varargs
Add -auxclasspath option for specifying Type Resolution classpath from command line.

Ant task upgrade:
	Added a new attribute 'maxRuleCount' to indicate whether or not to fail the build if PMD finds that much violations.

March 07, 2008 - 4.2rc1:

Fixed bug 1866198 - PMD should not register global Logger
Fixed bug 1843273 - False - on SimplifyBooleanReturns
Fixed bug 1848888 - Fixed false positive in UseEqualsToCompareStrings
Fixed bug 1874313 - Documentation bugs
Fixed bug 1855409 - False + in EmptyMethodInAbstractClassShouldBeAbstract
Fixed bug 1888967 - Updated xpath query to detect more "empty" methods.
Fixed bug 1891399 -	Check for JUnit4 test method fails
Fixed bug 1894821 - False - for Test Class without Test Cases
Fixed bug 1882457 - PositionLiteralsFirstInComparisons rule not working OK
Fixed bug 1842505 - XML output incorrect for inner classes
Fixed bug 1808158 - Constructor args could also be final
Fixed bug 1902351 - AvoidReassigningParameters not identify parent field
Fixed other false positives in EmptyMethodInAbstractClassShouldBeAbstract
Fixed other issues in SimplifyBooleanReturns
Modified AvoidReassigningParameter to also check constructor arguments for reassignement

New rules:
	Basic ruleset: AvoidMultipleUnaryOperators
	Controversial ruleset: DoNotCallGarbageCollectionExplicitly
	Design ruleset : ReturnEmptyArrayRatherThanNull,TooFewBranchesForASwitchStatement,AbstractClassWithoutAnyMethod
	Codesize : TooManyMethods
	StrictExceptions : DoNotThrowExceptionInFinally
	Strings : AvoidStringBufferField

Rule upgrade:
	CyclomaticComplexity now can be configured to display only class average complexity or method complexity, or both.

Designer upgrade:
	A new panel for symbols and a tooltips on AST node that displays line, column and access node attributes (private,
	static, abstract,...)

1.7 added as a valid option for targetjdk.