@@ -1,5 +1,6 @@
 March ??, 2008 - 4.2:
 Fixed bug 1912831 - False + UnusedPrivateMethod with varargs
+Fixed bug 1913536 - Rule Designer does not recognize JSP(XML)
 Add -auxclasspath option for specifying Type Resolution classpath from command line.
 
 Ant task upgrade:
